[package]
name = "AoC_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228" }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"

[[bin]]
name = "run_aoc"
path = "src/main.rs"
